<resources>
    <string name="app_name">Clean Ace</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="ok">OK</string>
</resources>