<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ng.com.intellifarms.screens.SignUpFragment">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/first_name_edit_text_container"
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname_edit_text"
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/last_name_edit_text_container"
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_edit_text"
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/phone_number_edit_text_container"
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_edit_text"
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <FrameLayout
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>


            <FrameLayout
                style="@style/AppTheme.TextInputLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.TextAppearance.TextInputLayoutStyle"
                    android:hint="@string/confirm_password">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEdiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <Button
                android:id="@+id/button_first"
                style="@style/AppTheme.HorizontalButtonAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/signup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="3dp"
                    android:text="Already have an account?" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Sign in"
                    android:textColor="@color/colorPrimary"
                    style="@style/AppTheme.TextAppearance.HyperLinkTextView"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
